--- a/roles/3proxy/templates/3proxy.cfg.j2
+++ b/roles/3proxy/templates/3proxy.cfg.j2
@@ -1,12 +1,26 @@
+daemon
+timeouts 1 5 30 60 180 1800 15 60
+pidfile {{ pid_file }}
+
 {% for user in proxy_config['users'] %}
 users "{{ user['name'] }}:CL:{{ user['password'] }}"
 {% endfor %}
+
+log @ M
+logformat "L%Y-%m-%d %H:%M:%SGMT%z (user)%U (service)%N:%p (error)%E (client)%C:%c (request)%R:%r (query)%Q:%q (i/o)%I/%O (hostname)%n %T"
+
+maxconn 5000
+external {{ proxy_config['server_ip'] }}
+internal {{ proxy_config['server_ip'] }}
+
 {% for address in proxy_config['dns'] %}
 nserver {{ address }}
 {% endfor %}
+
 allow *
 auth strong
-proxy -p{{ proxy_config['port'] }} -i{{ proxy_config['server_ip'] }} -e{{ proxy_config['server_ip'] }}
+proxy -p{{ proxy_config['port'] }} -n
+
 {% if proxy_config['management']['enabled'] %}
 flush
 auth strong
@@ -14,5 +28,6 @@ allow {{ proxy_config['management']['user']['name'] }}
 deny *
 admin -p{{ proxy_config['management']['port'] }} -i{{ proxy_config['server_ip'] }} -e{{ proxy_config['server_ip'] }}
 {% endif %}
-daemon
-log /var/log/3proxy.log D
+
+setuid {{ getent_passwd.nobody[1] }}
+setgid {{ getent_group.nobody[1] }}
