- The host is renamed - Service `3proxy` can be reloaded - Certbot service & timer can be generated for any amount of domains

--- a/roles/3proxy/templates/3proxy.service.j2
+++ b/roles/3proxy/templates/3proxy.service.j2
@@ -10,6 +10,7 @@ PermissionsStartOnly=true
 ExecStartPre=/usr/bin/mkdir -p {{ pid_dir }}
 ExecStartPre=/usr/bin/chown -R nobody:nobody {{ pid_dir }}
 ExecStart=/usr/bin/{{ service_name }} {{ config_path }}
+ExecReload=kill -SIGUSR1 ${MAINPID}
 Restart=on-failure
 PIDFile={{ pid_file }}
 
